fix the size and gap of about sectinos text

--- a/src/input.css
+++ b/src/input.css
@@ -40,7 +40,7 @@ body p{
 }
 
 #about-p p {
-    margin-top: 0.2rem;
+    margin-top: 1rem;
 }
 
 
