--- a/src/output.css
+++ b/src/output.css
@@ -11,8 +11,6 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-3xs: 16rem;
-    --container-2xs: 18rem;
-    --container-xs: 20rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-2xl: 1.5rem;
@@ -235,9 +233,6 @@
   .hidden {
     display: none;
   }
-  .table {
-    display: table;
-  }
   .aspect-video {
     aspect-ratio: var(--aspect-video);
   }
@@ -256,71 +251,26 @@
   .w-52 {
     width: calc(var(--spacing) * 52);
   }
-  .w-92 {
-    width: calc(var(--spacing) * 92);
-  }
-  .w-\[0\%\] {
-    width: 0%;
-  }
-  .w-\[8\%\] {
-    width: 8%;
-  }
   .w-\[8rem\] {
     width: 8rem;
-  }
-  .w-\[9\%\] {
-    width: 9%;
   }
   .w-\[15rem\] {
     width: 15rem;
   }
-  .w-\[20\%\] {
-    width: 20%;
-  }
-  .w-\[20\] {
-    width: 20;
-  }
-  .w-\[60\%\] {
-    width: 60%;
-  }
-  .w-\[70\%\] {
-    width: 70%;
-  }
-  .w-\[78\%\] {
-    width: 78%;
-  }
   .w-\[80\%\] {
     width: 80%;
-  }
-  .w-\[82\%\] {
-    width: 82%;
-  }
-  .w-\[85\%\] {
-    width: 85%;
-  }
-  .w-\[90\%\] {
-    width: 90%;
   }
   .w-full {
     width: 100%;
   }
-  .flex-grow {
-    flex-grow: 1;
-  }
   .grow {
     flex-grow: 1;
-  }
-  .border-collapse {
-    border-collapse: collapse;
   }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
   }
   .cursor-pointer {
     cursor: pointer;
-  }
-  .resize {
-    resize: both;
   }
   .flex-col {
     flex-direction: column;
@@ -368,10 +318,6 @@
     border-top-left-radius: var(--radius-4xl);
     border-top-right-radius: var(--radius-4xl);
   }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
-  }
   .bg-\[\#1A0B2E\] {
     background-color: #1A0B2E;
   }
@@ -402,9 +348,6 @@
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
   }
-  .px-24 {
-    padding-inline: calc(var(--spacing) * 24);
-  }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
@@ -425,9 +368,6 @@
   }
   .py-24 {
     padding-block: calc(var(--spacing) * 24);
-  }
-  .pt-2 {
-    padding-top: calc(var(--spacing) * 2);
   }
   .pt-16 {
     padding-top: calc(var(--spacing) * 16);
@@ -479,13 +419,6 @@
   }
   .text-white {
     color: var(--color-white);
-  }
-  .underline {
-    text-decoration-line: underline;
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
   }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
@@ -581,11 +514,6 @@
       height: 100vh;
     }
   }
-  .sm\:w-2xs {
-    @media (width >= 40rem) {
-      width: var(--container-2xs);
-    }
-  }
   .sm\:w-3xs {
     @media (width >= 40rem) {
       width: var(--container-3xs);
@@ -596,24 +524,9 @@
       width: calc(var(--spacing) * 90);
     }
   }
-  .sm\:w-92 {
-    @media (width >= 40rem) {
-      width: calc(var(--spacing) * 92);
-    }
-  }
-  .sm\:w-\[2\] {
-    @media (width >= 40rem) {
-      width: 2;
-    }
-  }
   .sm\:w-\[16rem\] {
     @media (width >= 40rem) {
       width: 16rem;
-    }
-  }
-  .sm\:w-\[24rem\] {
-    @media (width >= 40rem) {
-      width: 24rem;
     }
   }
   .sm\:w-\[25\%\] {
@@ -629,11 +542,6 @@
   .sm\:w-\[28\%\] {
     @media (width >= 40rem) {
       width: 28%;
-    }
-  }
-  .sm\:w-\[34rem\] {
-    @media (width >= 40rem) {
-      width: 34rem;
     }
   }
   .sm\:w-\[38\%\] {
@@ -793,7 +701,7 @@ body p {
   cursor: pointer;
 }
 #about-p p {
-  margin-top: 0.2rem;
+  margin-top: 1rem;
 }
 .kk {
   display: none;
@@ -826,19 +734,9 @@ body p {
   syntax: "*";
   inherits: false;
 }
-@property --tw-border-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-font-weight {
   syntax: "*";
   inherits: false;
-}
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
 }
 @property --tw-duration {
   syntax: "*";
@@ -871,9 +769,7 @@ body p {
       --tw-rotate-z: initial;
       --tw-skew-x: initial;
       --tw-skew-y: initial;
-      --tw-border-style: solid;
       --tw-font-weight: initial;
-      --tw-outline-style: solid;
       --tw-duration: initial;
       --tw-ease: initial;
       --tw-scale-x: 1;
